<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app = "http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/action_submit"
        android:id="@+id/action_submit"
        android:icon="@android:drawable/ic_menu_set_as"
        app:showAsAction="always"
        />

    <item
        android:title="@string/Publish"
        android:id="@+id/action_publish"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always"
        />

    <item
        android:title="@string/StartService"
        android:id="@+id/action_start_service"
        />

    <item
        android:title="@string/StopService"
        android:id="@+id/action_stop_service"
        />

    <item
        android:title="@string/Setting"
        android:id="@+id/action_setting"
        />

</menu>